# jiloa

./: .env  .gitignore  Makefile  docker-compose.test.yml  docker-compose.yml  test.py
.github/workflow/: ci.yml
.github/workflows/: ci.yml
backend/: Dockerfile  main.py  pyproject.toml
backend/app/: config.py  database.py  main.py  ml.py  schemas.py
backend/app/routes/: auth.py  favorites.py  health.py  movies.py
backend/tests/: test_api.py
base/: Dockerfile  pyproject.toml
create_bdd/: enquete.py  importer_donnees.py  schema.sql  test_similarity.py  test_strats.py  test_table_integrity.py  tests.py
db/: 02_schema.sql  03_vector_columns.sql  05_users.sql
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
frontend 2/: package.json
frontend/public/: index.html
frontend/src/: App.css  App.jsx  api.js  setupTests.js
frontend/src/__test__/: api.auth.test.js  api.request.test.js
frontend/src/components/: Header.jsx  MovieCard.jsx  MovieRow.jsx
frontend/src/pages/: Home.jsx  MovieDetail.jsx
seeder/: Dockerfile  Dockerfile.test  importer_donnees.py  pyproject.toml
seeder/test_data/: keywords.csv  link.csv  movies_metadata.csv  tag.csv
