[project]
name = "movie-app-seeder"
version = "0.1.0"
description = "One-shot data importer for the movie database"
requires-python = ">=3.11,<3.12"
# Pas de dependencies : on hérite tout de la base image

[dependency-groups]
dev = [
    "ruff>=0.8",
]

[tool.ruff]
line-length = 100
target-version = "py311"